@@ -29,9 +29,11 @@
 				<configuration>
 					<source>11</source>
 					<target>11</target>
-<!--                    <compilerArgs>-->
-<!--                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>-->
-<!--                    </compilerArgs>-->
+                    <compilerArgs>
+                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                        <arg>--add-modules=java.naming,java.rmi,jdk.naming.rmi</arg>
+                        <arg>--add-exports=jdk.naming.rmi/com.sun.jndi.rmi.registry=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
 			</plugin>
 			<plugin>
